# Abelito-OS

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.md  Makefile  README.md  bootstrap.py  docker-compose.yml  install.sh  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  start_all.ps1
.ai/: ui-shell.md
.codex/: AGENTS.md  SKILLS.md  config.toml
.vibecheck/: last-score.json  sync-queue.json
abel_core/: __init__.py  decision_engine.py  event_bus.py  graph_manager.py  main.py  orchestrator.py
abel_os/: __init__.py  ceo_agent.py  config.py  lanes.py  main.py  orchestrator.py  schemas.py
config/: mobile_offer_rules.yaml  skills.conf
connectors/: github_client.py
core/: agent_skeleton.py  bootstrap_s9.py  decision_graph.py  intent_logger.py  memory.py  memory_manager.py  monitor.py  multi_agent.py  native_tools.py  orchestrator.py  patcher.py  response_compressor.py  scheduler.py  smart_search.py  tool_gateway.py  watchdog.py  web_search.py
data/: abel_memory.db  selfcheck.db  simulate_execution.db  test_auth_users.db  test_auth_wrong_pw.db  test_memory_upgrade_05f5b5446a594a7896e8552d54ae7714.db  test_memory_upgrade_69fcd2240dc04c88bd3a80b92b2cecb2.db  test_memory_upgrade_7c83bbb67b0b4031aba6bcd30f9b6945.db  test_pipeline_api.db
docs/: ARCHITECTURE_V3_1.md
mobile/: action_policy.py  adb_controller.py  android_uiautomator_controller.py  appium_session.py  ios_wda_controller.py  kill_switch.py  mobile_agent.py  offer_detector.py  offer_scorer.py  screen_parser.py  telemetry.py
sandbox_backend/: __init__.py  api.py  backend.py
ui/: app.py
(+157 files in other folders)
